--- a/producteurs.html
+++ b/producteurs.html
@@ -236,7 +236,9 @@
                 </a></div></section><section data-silex-type="container-element" class="container-element editable-style section-element silex-id-1483130400381-10 website-min-width prevent-resizable">
         <div data-silex-type="container-element" class="editable-style silex-element-content website-width container-element silex-id-1483130400382-11" style="">
             
-        <div data-silex-type="html-element" class="editable-style html-element silex-id-1638727554540-14 page-producteurs paged-element silex-component-slideshow silex-use-height-not-minheight paged-element-visible" style=""><div class="silex-element-content"><div id="parent_1638728083176_991">
+        <div data-silex-type="text-element" class="editable-style text-element silex-id-1638728272357-17 page-producteurs paged-element full-width grey-text hide-on-mobile paged-element-visible" title=""><div class="silex-element-content normal">
+                    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+                </div></div><div data-silex-type="html-element" class="editable-style html-element silex-id-1638727554540-14 page-producteurs paged-element silex-component-slideshow silex-use-height-not-minheight paged-element-visible" style=""><div class="silex-element-content"><div id="parent_1638728083176_991">
 <!-- preview -->
 
 <div id="id_1638728083176_991">
@@ -322,7 +324,5 @@
     }, 0)
   })();
 </script>
-</div></div><div data-silex-type="text-element" class="editable-style text-element silex-id-1638728272357-17 page-producteurs paged-element full-width grey-text hide-on-mobile paged-element-visible" title=""><div class="silex-element-content normal">
-                    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-                </div></div></div>
+</div></div></div>
     </section><section data-silex-type="container-element" class="editable-style section-element silex-id-1638726127461-7 page-producteurs paged-element paged-element-visible"><div data-silex-type="container-element" class="editable-style container-element silex-id-1638726127462-8 silex-element-content website-width prevent-draggable"></div></section></body></html>
